--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "angular": "^1.5.2",
     "angular-route": "^1.5.2",
     "body-parser": "^1.15.0",
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "mongoose": "^4.4.10"
   }
 }
